objects/SGR_URE_Age_Rate_Driver__c.object
<CustomObject>
    <fields>
        <fullName>Corporate_Entity_Code__c</fullName>
        <label>Corporate Entity Code</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Division__c</fullName>
        <label>Division</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>IL</fullName>
                </value>
                <value>
                    <fullName>TX</fullName>
                </value>
                <value>
                    <fullName>NM</fullName>
                </value>
                <value>
                    <fullName>OK</fullName>
                </value>
                <value>
                    <fullName>MT</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FIPS_Code__c</fullName>
        <label>FIPS Code</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Line_Of_Business__c</fullName>
        <label>Line Of Business</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Market_Segment__c</fullName>
        <label>Market Segment</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>AFG</fullName>
                </value>
                <value>
                    <fullName>AG</fullName>
                </value>
                <value>
                    <fullName>ALI</fullName>
                </value>
                <value>
                    <fullName>APS</fullName>
                </value>
                <value>
                    <fullName>COMA</fullName>
                </value>
                <value>
                    <fullName>CPAA</fullName>
                </value>
                <value>
                    <fullName>EAML</fullName>
                </value>
                <value>
                    <fullName>FEP</fullName>
                </value>
                <value>
                    <fullName>HA</fullName>
                </value>
                <value>
                    <fullName>HCS2</fullName>
                </value>
                <value>
                    <fullName>HMSG</fullName>
                </value>
                <value>
                    <fullName>HSC1</fullName>
                </value>
                <value>
                    <fullName>HWB</fullName>
                </value>
                <value>
                    <fullName>IMTL</fullName>
                </value>
                <value>
                    <fullName>IMTS</fullName>
                </value>
                <value>
                    <fullName>JG</fullName>
                </value>
                <value>
                    <fullName>LAN</fullName>
                </value>
                <value>
                    <fullName>LG</fullName>
                </value>
                <value>
                    <fullName>LGC</fullName>
                </value>
                <value>
                    <fullName>LGL</fullName>
                </value>
                <value>
                    <fullName>LGN</fullName>
                </value>
                <value>
                    <fullName>MA</fullName>
                </value>
                <value>
                    <fullName>MAC</fullName>
                </value>
                <value>
                    <fullName>MARL</fullName>
                </value>
                <value>
                    <fullName>MBIL</fullName>
                </value>
                <value>
                    <fullName>MCCL</fullName>
                </value>
                <value>
                    <fullName>MCUL</fullName>
                </value>
                <value>
                    <fullName>MGC</fullName>
                </value>
                <value>
                    <fullName>MGL</fullName>
                </value>
                <value>
                    <fullName>MINAL</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Processing_Status__c</fullName>
        <label>Processing Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Ready</fullName>
                </value>
                <value>
                    <fullName>Processing</fullName>
                </value>
                <value>
                    <fullName>Processed Successfully</fullName>
                </value>
                <value>
                    <fullName>Processed With Errors</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Rate_Effective_Date__c</fullName>
        <label>Rate Effective Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Rating_Area_Number__c</fullName>
        <label>Rating Area Number</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SGR_Plan_Id__c</fullName>
        <label>Plan Id</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <label>Age Rate Driver</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Division__c</columns>
        <columns>FIPS_Code__c</columns>
        <columns>Market_Segment__c</columns>
        <columns>SGR_Plan_Id__c</columns>
        <columns>Line_Of_Business__c</columns>
        <columns>Rate_Effective_Date__c</columns>
        <columns>Processing_Status__c</columns>
        <columns>Rating_Area_Number__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>URE_Age_Rate_Driver Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Age Rate Drivers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>